[project]
name = "hermes"
version = "0.0.1"
description = "Hermes helps create job applications for you across companies that you are interested in."
authors = [
    {name = "CtrlAltGiri",email = "giridhar.balaz@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-agents (>=0.2.3,<0.3.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
